chore: nodemon and dev script added

--- a/package.json
+++ b/package.json
@@ -2,5 +2,11 @@
   "name": "node-app",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "dev": "nodemon src/index.js"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15"
+  }
 }
