--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Caio <whoiscaio@protonmail.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon index.js"
+    "dev": "nodemon src/index.js"
   },
   "dependencies": {
     "express": "^4.17.3"
